--- a/introduction.tex
+++ b/introduction.tex
@@ -5,10 +5,7 @@ MapReduce~\cite{Dean2004MapReduce} is one of the most popular and efficient big 
 Hadoop~\cite{White2010Hadoop} is the most frequently-used open source implementation of MapReduce.
 Programmers, researchers and even some computer science beginners can deal with big data processing jobs, such as log analysis, index building and data mining, on the platform of hadoop.
 
-A MapReduce Job consists of three parts: user-defined programs, input data and configuration parameters. Configuration parameters are the user-specified set of options. The selection of configuration parameters has a significant impact on the execution overhead of a MapReduce job, and the user can optimize the parameters to speedup job processing~\cite{Herodotou2011Profiling, Shi2014MRTuner, Li2014MRONLINE}. However, this is a great challenge for the IT professionals, even for people who have a good understanding of Hadoop's internal mechanism, to select the most effective set of parameters. To optimize the configuration parameters more effectively, a productive tool is necessary for users to predict MapReduce job's execution time with varying configuration parameters.
-
-The performance prediction of MapReduce jobs can predict the jobs' execution cost, which has more and more utility value. For example, it can be applied to optimize the configuration parameters of MapReduce jobs to speed up the jobs' execution, to dynamically adjust the number of cluster nodes for improving the cluster's resource utilization, and to select or implement the effective scheduling strategy. 
-
+The performance prediction of MapReduce jobs can predict the jobs' execution cost, which has more and more utility value. For example, it can be applied to optimize the configuration parameters of MapReduce jobs to speed up the jobs' execution~\cite{Herodotou2011Profiling, Shi2014MRTuner, Li2014MRONLINE}, to dynamically adjust the number of cluster nodes for improving the cluster's resource utilization, and to select or implement the effective scheduling strategy. However, it is full of challenges to accurately forecast the execution cost of the MapReduce job. The high-precision performance prediction needs not only to forecast the execution cost of each individual phase, but it also is essential to predict the overlap time between multiple parallel phases. What is more, the MapReduce job's execution is affected by a number of factors, such as configuration parameters, input data and the user-defined programs. As a consequence, It has certain difficulty to accurately predict each individual phase's cost and  the overlap time between multiple parallel phases.
 
 Nowadays, there are some related research~\cite{Herodotou2011Profiling, Shi2014MRTuner, Herodotou2011Hadoop} on the prediction of MapReduce job's execution time, which can be applied to optimize the configuration parameters ~\cite{Herodotou2011No}.  The construction of job's performance model is one of the most effective methods to forecast the execution time of MapReduce jobs. However, there are some deficiencies in the existing performance models. The present models are constructed to predict the executive cost of each individual phase of MapReduce, and the simple addition of each phase's cost is the prediction of the execution time. As a matter of fact, the executing procedure of a MapReduce job in Hadoop system is complicated, which is not computed step by step purely. For example, multi-threading technology leads to the parallel execution between multiple individual phases.
 
